Templatise and integrate bootstrap

--- a/bernard/templates/order.html
+++ b/bernard/templates/order.html
@@ -1,6 +1,10 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h2>Order {{ order.external_id }} </h2>
 
 <ul>
     <li>Address: {{ order.street }} {{ order.city }} {{ order.postcode }}</li>
     <li>Vendor: {{ order.vendor.name }} </li>
 </ul>
+{% endblock %}
