--- a/bernard/templates/base.html
+++ b/bernard/templates/base.html
@@ -3,10 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
+
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
 
     <title>Levfinder</title>
   </head>
@@ -17,8 +20,7 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">viren</a>
+				<a class="nav-link dropdown-toggle px-3" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">viren</a>
 				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 					<a class="dropdown-item" href="#">Account</a>
 					<a class="dropdown-item" href="#">Support</a>
@@ -35,25 +37,19 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link {% block nav-overview %}{% endblock %}" href="{% url 'overview' %}">
                                 <span data-feather="home"></span>
-                                Overview<span class="sr-only">(current)</span>
+                                Overview
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link {% block nav-vehicles %}{% endblock %}" href="{% url 'vehicles' %}">
                                 <span data-feather="truck"></span>
                                 Vehicles
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span data-feather="navigation"></span>
-                                Deliveries
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link {% block nav-orders %}{% endblock %}" href="{% url 'orders' %}">
                                 <span data-feather="shopping-cart"></span>
                                 Orders
                             </a>
@@ -65,10 +61,8 @@
     </div>
 
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-		<div class="">
-			{% block content %}{% endblock %}
-		</div>
+    <main class="col-md-9 ml-md-auto col-lg-10 px-4" role="main">
+    {% block content %}{% endblock %}
     </main>
 
     <script src="{% static "js/jquery-3.3.1.min.js" %}"></script>
