Add map UI controls and vehicle path

--- a/bernard/templates/base.html
+++ b/bernard/templates/base.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "css/styles.css" %}">
 
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+    {% block head-extra %}{% endblock %}
 
     <title>Levfinder</title>
   </head>
