--- a/bernard/templates/order.html
+++ b/bernard/templates/order.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
+{% block head-extra %}
+
+<script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
+<script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+<script src="http://js.api.here.com/v3/3.0/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
+
+<link rel="stylesheet" type="text/css" href="http://js.api.here.com/v3/3.0/mapsjs-ui.css" />
+
+{% endblock %}
+
 {% block nav-orders %}active{% endblock %}
 
 {% block content %}
@@ -56,15 +66,19 @@ var map = new H.Map(
         center: { lat: 58.6, lng: 14.4 }
     }
 );
+map.setZoom(14);
+
+var ui = H.ui.UI.createDefault(map, defaultLayers);
 
 var onResult = function(result) {
     var locations = result.Response.View[0].Result, position, marker;
-    
+
     for (i = 0;  i < locations.length; i++) {
         position = {
             lat: locations[i].Location.DisplayPosition.Latitude,
             lng: locations[i].Location.DisplayPosition.Longitude
         };
+        map.setCenter(position);
         marker = new H.map.Marker(position);
         map.addObject(marker);
     }
