--- a/bernard/templates/bernard/base.html
+++ b/bernard/templates/bernard/base.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/styles.css" %}">
+    <link rel="stylesheet" href="{% static "bernard/css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "bernard/css/styles.css" %}">
 
     {% block head-extra %}{% endblock %}
 
@@ -64,9 +64,9 @@
     {% block content %}{% endblock %}
     </main>
 
-    <script src="{% static "js/jquery-3.3.1.min.js" %}"></script>
-    <script src="{% static "js/popper.min.js" %}"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "bernard/js/jquery-3.3.1.min.js" %}"></script>
+    <script src="{% static "bernard/js/popper.min.js" %}"></script>
+    <script src="{% static "bernard/js/bootstrap.min.js" %}"></script>
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <script>feather.replace()</script>
   </body>
