--- a/bernard/templates/bernard/vehicles.html
+++ b/bernard/templates/bernard/vehicles.html
@@ -14,11 +14,13 @@
     <div class="row">
         <div class="col-md-6">
             {% if vehicles %}
-            <ol>
+            <ul>
             {% for vehicle in vehicles %}
-            <li><a href="/vehicles/{{ vehicle.id }}">{{ vehicle.external_id }}</a></li>
+            <li><a href="/vehicles/{{ vehicle.id }}">
+                <span class="text-monospace">{{ vehicle.external_id }}</span>
+                    ({{ vehicle.vendor.name }})</a></li>
             {% endfor %}
-            </ol>
+            </ul>
             {% endif %}
         </div>
     </div>
