Use Jazzband Choices instead of custom enums

--- a/bernard/templates/bernard/order.html
+++ b/bernard/templates/bernard/order.html
@@ -21,21 +21,21 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <table class="table table-bordered">
+            <table class="table table-borderless">
                 <tr>
-                    <td scope="col">Street</td>
+                    <th scope="row">Street</th>
                     <td>{{ order.street }}</td>
                 </tr>
                 <tr>
-                    <td scope="col">City</td>
+                    <th scope="row">City</th>
                     <td>{{ order.city }} {{ order.postcode }}</td>
                 </tr>
                 <tr>
-                    <td scope="col">Phone</td>
+                    <th scope="row">Phone</th>
                     <td>{{ order.phone }}</td>
                 </tr>
                 <tr>
-                    <td scope="col">Email</td>
+                    <th scope="row">Email</th>
                     <td>{{ order.email }}</td>
                 </tr>
             </table>
