--- a/bernard/templates/bernard/overview.html
+++ b/bernard/templates/bernard/overview.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row p-4">
     <div class="col-md-4">
-        <h2>Unscheduled orders</h2>
+        <h2>Pending</h2>
         {% if unscheduled_orders %}
         <ul>
         {% for order in unscheduled_orders %}
@@ -17,12 +17,12 @@
         {% endif %}
     </div>
     <div class="col-md-4">
-        <h2>Scheduled deliveries</h2>
+        <h2>Scheduled</h2>
         {% if scheduled_deliveries %}
         <ul>
         {% for delivery in scheduled_deliveries %}
         <li>
-            <a href="orders/{{ delivery.order.id }}">{{ delivery.order.external_id }}</a> by <a href="vehicles/{{ delivery.vehicle.id }}">{{ delivery.vehicle.external_id }}</a>
+            <a href="orders/{{ delivery.order.id }}">{{ delivery.order.external_id }}</a> by <a href="vehicles/{{ delivery.vehicle.id }}">{{ delivery.vehicle.external_id }}</a> on {{ delivery.timeslot }}
         </li>
         {% endfor %}
         </ul>
