--- a/bernard/templates/bernard/base.html
+++ b/bernard/templates/bernard/base.html
@@ -7,11 +7,11 @@
 
     <link rel="stylesheet" href="{% static "bernard/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "bernard/css/styles.css" %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
     <script src="{% static "bernard/js/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "bernard/js/popper.min.js" %}"></script>
     <script src="{% static "bernard/js/bootstrap.min.js" %}"></script>
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
 
     {% block head-extra %}{% endblock %}
 
@@ -42,19 +42,19 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link {% block nav-overview %}{% endblock %}" href="{% url 'overview' %}">
-                                <span data-feather="home"></span>
+                                <span class="fas fa-home"></span>
                                 Overview
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block nav-vehicles %}{% endblock %}" href="{% url 'vehicles' %}">
-                                <span data-feather="truck"></span>
+                                <span class="fas fa-truck"></span>
                                 Vehicles
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block nav-orders %}{% endblock %}" href="{% url 'orders' %}">
-                                <span data-feather="shopping-cart"></span>
+                                <span class="fas fa-shopping-cart"></span>
                                 Orders
                             </a>
                         </li>
@@ -69,6 +69,5 @@
     {% block content %}{% endblock %}
     </main>
 
-    <script>feather.replace()</script>
   </body>
 </html>
