--- a/bernard/templates/bernard/deliveries_new.html
+++ b/bernard/templates/bernard/deliveries_new.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block head-extra %}
+    <link rel="stylesheet" href="{% static "bernard/css/bootstrap-datetimepicker.css" %}">
     <script src="{% static "bernard/js/moment.js" %}"></script>
     <script src="{% static "bernard/js/bootstrap-datetimepicker.js" %}"></script>
 {% endblock %}
@@ -43,7 +44,7 @@
                         <input type="text" name="timeslot" id="timeslot" class="form-control" aria-describedby="datetime">
                         <div class="input-group-append">
                             <span class="input-group-text">
-                                <span data-feather="calendar"></span>
+                                <span class="fas fa-calendar-alt"></span>
                             </span>
                         </div>
                     </div>
@@ -60,6 +61,20 @@
         $("#datetime").datetimepicker({
             format: 'YYYY-MM-DD HH:mm',
             stepping: 30,
+            locale: moment.locale('sv'),
+            daysOfWeekDisabled: [6, 0],
+            minDate: moment.unix({{ now }}),
+            icons: {
+                time: 'fas fa-clock',
+                date: 'fas fa-calendar',
+                up: 'fas fa-caret-up',
+                down: 'fas fa-caret-down',
+                previous: 'fas fa-caret-left',
+                next: 'fas fa-caret-right',
+                today: 'fas fa-calendar-alt',
+                clear: 'fas fa-times',
+                close: 'fas fa-times-circle',
+            },
         });
     });
 </script>
