--- a/bernard/templates/bernard/order.html
+++ b/bernard/templates/bernard/order.html
@@ -15,8 +15,10 @@
 {% block content %}
 <h2 class="h2 p-3">
     <span class="text-monospace">{{ order.external_id }}</span>
-    {{ order.vendor.name }}
 </h2>
+<h6 class="h6 pl-3 subtitle">
+    {{ order.vendor.name }}
+</h6>
 
 <div class="container">
     <div class="row">
