--- a/bernard/templates/bernard/vehicles.html
+++ b/bernard/templates/bernard/vehicles.html
@@ -18,7 +18,7 @@
             {% for vehicle in vehicles %}
             <li><a href="/vehicles/{{ vehicle.id }}">
                 <span class="text-monospace">{{ vehicle.external_id }}</span>
-                    ({{ vehicle.vendor.name }})</a></li>
+                </a> {{ vehicle.vendor.name }}</li>
             {% endfor %}
             </ul>
             {% endif %}
