Add nav breadcrumbs

--- a/bernard/templates/bernard/orders.html
+++ b/bernard/templates/bernard/orders.html
@@ -6,9 +6,11 @@
 {% block nav-orders %}active{% endblock %}
 
 {% block content %}
-<h2 class="h2 p-3">
-    Orders
-</h2>
+<nav aria-label="breadcrumb" class="pt-3">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">Orders</li>
+    </ol>
+</nav>
 
 <div class="container">
     <div class="row">
