--- a/bernard/templates/bernard/order.html
+++ b/bernard/templates/bernard/order.html
@@ -13,7 +13,14 @@
 {% block nav-orders %}active{% endblock %}
 
 {% block content %}
-<h2 class="h2 p-3">
+<nav aria-label="breadcrumb" class="pt-3">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item" aria-current="page"><a href="/orders">Orders</a></li>
+        <li class="breadcrumb-item active" aria-current="page">{{ order.external_id }}</li>
+    </ol>
+</nav>
+
+<h2 class="h2 pl-3">
     <span class="text-monospace">{{ order.external_id }}</span>
 </h2>
 <h6 class="h6 pl-3 subtitle">
