Further UI refinements

--- a/bernard/templates/bernard/deliveries_new.html
+++ b/bernard/templates/bernard/deliveries_new.html
@@ -8,13 +8,11 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="h2 p-3">
-    Schedule new delivery
-</h2>
 
 <div class="container">
-    <div class="row">
+    <div class="row pt-4">
         <div class="col-md-6">
+            <h2 class="h2">Schedule new delivery</h2>
             <form action="/deliveries/new" method="post">
                 {% csrf_token %}
 
