--- a/bernard/templates/bernard/orders.html
+++ b/bernard/templates/bernard/orders.html
@@ -16,11 +16,11 @@
     <div class="row">
         <div class="col-md-6">
             {% if orders %}
-            <ul>
+            <ul class="list-unstyled">
             {% for order in orders %}
-            <li><a href="/orders/{{ order.id }}">
-                <span class="text-monospace">{{ order.external_id }}</span>
-                </a> at {{ order.vendor.name }}</li>
+            <li>
+                <a href="/orders/{{ order.id }}"><span class="text-monospace">{{ order.external_id }}</span></a> at {{ order.vendor.name }}
+            </li>
             {% endfor %}
             </ul>
             {% endif %}
