--- a/bernard/templates/bernard/overview.html
+++ b/bernard/templates/bernard/overview.html
@@ -9,9 +9,9 @@
         {% if unscheduled_orders %}
         <ul class="list-unstyled">
         {% for order in unscheduled_orders %}
-        <li><a href="orders/{{order.id}}">
-                <span class="text-monospace">{{ order.external_id }}</span>
-                </a> at {{ order.vendor.name }}</li>
+        <li>
+            <a href="orders/{{order.id}}"><span class="text-monospace">{{ order.external_id }}</span></a>
+            at {{ order.vendor.name }}</li>
         {% endfor %}
         </ul>
         {% endif %}
@@ -22,11 +22,8 @@
         <ul class="list-unstyled">
         {% for delivery in scheduled_deliveries %}
         <li>
-            <a href="orders/{{ delivery.order.id }}">
-                <span class="text-monospace">{{ delivery.order.external_id }}</span>
-            </a> by <a href="vehicles/{{ delivery.vehicle.id }}">
-                <span class="text-monospace">{{ delivery.vehicle.external_id }}</span>
-            </a> on {{ delivery.timeslot |date:'Y-m-d G:H' }}
+            <a href="orders/{{ delivery.order.id }}"><span class="text-monospace">{{ delivery.order.external_id }}</span></a>
+            by <a href="vehicles/{{ delivery.vehicle.id }}"><span class="text-monospace">{{ delivery.vehicle.external_id }}</span></a> on {{ delivery.timeslot |date:'Y-m-d G:H' }}
         </li>
         {% endfor %}
         </ul>
@@ -37,9 +34,7 @@
         {% if vehicles %}
         <ul class="list-unstyled">
         {% for vehicle in vehicles %}
-        <li><a href="vehicles/{{ vehicle.id }}">
-                <span class="text-monospace">{{ vehicle.external_id }}</span>
-                    </a> {{ vehicle.vendor.name }}</li>
+        <li><a href="vehicles/{{ vehicle.id }}"><span class="text-monospace">{{ vehicle.external_id }}</span></a> {{ vehicle.vendor.name }}</li>
         {% endfor %}
         </ul>
         {% endif %}
