--- a/bernard/templates/bernard/vehicles.html
+++ b/bernard/templates/bernard/vehicles.html
@@ -16,11 +16,9 @@
     <div class="row">
         <div class="col-md-6">
             {% if vehicles %}
-            <ul>
+            <ul class="list-unstyled">
             {% for vehicle in vehicles %}
-            <li><a href="/vehicles/{{ vehicle.id }}">
-                <span class="text-monospace">{{ vehicle.external_id }}</span>
-                </a> {{ vehicle.vendor.name }}</li>
+            <li><a href="/vehicles/{{ vehicle.id }}"><span class="text-monospace">{{ vehicle.external_id }}</span></a> {{ vehicle.vendor.name }}</li>
             {% endfor %}
             </ul>
             {% endif %}
