--- a/bernard/templates/bernard/base.html
+++ b/bernard/templates/bernard/base.html
@@ -31,7 +31,7 @@
 
                 <div class="dropdown-divider"></div>
 
-                <a class="dropdown-item" href="#">Log out</a>
+                <a class="dropdown-item" href="/logout">Log out</a>
             </div>
         </li>
         </ul>
