--- a/bernard/templates/bernard/base.html
+++ b/bernard/templates/bernard/base.html
@@ -19,21 +19,38 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow fixed-top flex-md-nowrap p-0">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Levfinder</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="/">Levfinder</a>
+
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">API Docs</a>
+            </li>
+        </ul>
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle px-3" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">viren</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Account</a>
-                <a class="dropdown-item" href="#">Support</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="fas fa-language mb-auto"></span>
+                </a>
 
-                <div class="dropdown-divider"></div>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarLangDropdown">
+                    <a class="dropdown-item active" href="#">English</a>
+                    <a class="dropdown-item" href="#">Svenska</a>
+                </div>
+            </li>
 
-                <a class="dropdown-item" href="/logout">Log out</a>
-            </div>
-        </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">USERNAMEHERE</a>
+
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarUserDropdown">
+                    <div class="dropdown-item disabled">Org: ORGNAMEHERE</div>
+
+                    <div class="dropdown-divider"></div>
+
+                    <a class="dropdown-item" href="/logout">Log out</a>
+                </div>
+            </li>
         </ul>
     </nav>
 
@@ -44,20 +61,26 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link {% block nav-overview %}{% endblock %}" href="{% url 'overview' %}">
-                                <span class="fas fa-home"></span>
+                                <span class="fas fa-home fa-fw"></span>
                                 Overview
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% block nav-notifications %}{% endblock %}" href="{% url 'notifications' %}">
+                                <span class="fas fa-box fa-fw"></span>
+                                Notifications
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% block nav-vehicles %}{% endblock %}" href="{% url 'vehicles' %}">
-                                <span class="fas fa-truck"></span>
+                                <span class="fas fa-truck fa-fw"></span>
                                 Vehicles
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% block nav-orders %}{% endblock %}" href="{% url 'orders' %}">
-                                <span class="fas fa-shopping-cart"></span>
-                                Orders
+                            <a class="nav-link {% block nav-tokens %}{% endblock %}" href="#">
+                                <span class="fas fa-key fa-fw"></span>
+                                Tokens
                             </a>
                         </li>
                     </ul>
@@ -66,7 +89,7 @@
         </div>
     </div>
 
-    <main class="col-md-9 ml-md-auto col-lg-10 px-4" role="main">
+    <main class="offset-md-2 col-md-8 mt-4" role="main">
     {% block content %}{% endblock %}
     </main>
 
