--- a/bernard/templates/bernard/login.html
+++ b/bernard/templates/bernard/login.html
@@ -14,8 +14,10 @@
 <body class="text-center">
     <div class="signin">
         <form class="form-signin" action="/login/" method="post">
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal">Levfinder</h1>
+
             {% csrf_token %}
+
             {% if message %}
                 <div class="alert alert-danger" role="alert">
                     {{ message }}
