--- a/bernard/templates/bernard/vehicles.html
+++ b/bernard/templates/bernard/vehicles.html
@@ -6,11 +6,9 @@
 {% block nav-vehicles %}active{% endblock %}
 
 {% block content %}
-<nav aria-label="breadcrumb" class="pt-3">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-current="page">Vehicles</li>
-    </ol>
-</nav>
+<h5 class="h5">Vehicles</h5>
+
+<button class="btn btn-outline-primary btn-sm">New vehicle</button>
 
 <div class="container">
     <div class="row">
@@ -18,7 +16,7 @@
             {% if vehicles %}
             <ul class="list-unstyled">
             {% for vehicle in vehicles %}
-            <li><a href="/vehicles/{{ vehicle.id }}"><span class="text-monospace">{{ vehicle.external_id }}</span></a> {{ vehicle.vendor.name }}</li>
+            <li><a href="/vehicles/{{ vehicle.id }}"><span class="text-monospace">{{ vehicle.ref_id }}</span></a> {{ vehicle.vendor.name }}</li>
             {% endfor %}
             </ul>
             {% endif %}
