--- a/bernard/templates/bernard/vehicles.html
+++ b/bernard/templates/bernard/vehicles.html
@@ -6,22 +6,36 @@
 {% block nav-vehicles %}active{% endblock %}
 
 {% block content %}
-<h5 class="h5">Vehicles</h5>
-
-<button class="btn btn-outline-primary btn-sm">New vehicle</button>
-
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            {% if vehicles %}
-            <ul class="list-unstyled">
-            {% for vehicle in vehicles %}
-            <li><a href="/vehicles/{{ vehicle.id }}"><span class="text-monospace">{{ vehicle.ref_id }}</span></a> {{ vehicle.vendor.name }}</li>
-            {% endfor %}
-            </ul>
-            {% endif %}
+<div class="row">
+<div class="col-md-6">
+
+<div class="row">
+    <div class="col-md-8">
+        <h4 class="h4 mb-0">Vehicles</h4>
+        <div class="text-muted">Vehicles registered to your organisation</div>
+    </div>
+    <div class="col-md-4 offset-md-0">
+        <div class="d-flex flex-row-reverse">
+        <button class="btn btn-outline-primary">Add</button>
         </div>
     </div>
 </div>
 
+<hr class="my-2">
+
+<div class="row">
+    <div class="col-md-12">
+        {% if vehicles %}
+        <ul class="list-unstyled">
+        {% for vehicle in vehicles %}
+        <li><a href="/vehicles/{{ vehicle.id }}"><span class="text-monospace">{{ vehicle.ref_id }}</span></a> {{ vehicle.vendor.name }}</li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+    </div>
+</div>
+</div>
+</div>
+</div>
 {% endblock %}
