--- a/bernard/templates/bernard/notifications.html
+++ b/bernard/templates/bernard/notifications.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-4 offset-md-0">
         <div class="d-flex flex-row-reverse">
-        <button class="btn btn-outline-primary">Add</button>
+            <a class="btn btn-outline-primary" href="{% url 'notification_new' %}">Add</a>
         </div>
     </div>
 </div>
