--- a/bernard/templates/bernard/base.html
+++ b/bernard/templates/bernard/base.html
@@ -44,7 +44,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.get_username }}</a>
 
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarUserDropdown">
-                    <div class="dropdown-item disabled">{{ user.organisation.name }}</div>
+                    <div class="dropdown-item disabled">ORGNAMEHERE</div>
 
                     <div class="dropdown-divider"></div>
 
@@ -56,7 +56,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+            <nav class="px-0 col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
