--- a/bernard/templates/bernard/login.html
+++ b/bernard/templates/bernard/login.html
@@ -11,7 +11,7 @@
     <title>Levfinder</title>
 </head>
 
-<body class="text-center">
+<body class="text-center bg-light">
     <div class="signin">
         <form class="form-signin" action="/login/" method="post">
             <h1 class="h3 mb-3 font-weight-normal">Levfinder</h1>
